# stellar-dex

./: .gitignore  Cargo.toml  OPTIMIZATION_SUMMARY.md  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: ci.yml  deploy.yml
.qwen/: settings.json
app/: globals.css  layout.tsx  page.tsx
app/activity/: page.tsx
app/pool/: page.tsx
components/: ActivityFeed.tsx  Navbar.tsx  PoolPanel.tsx  SwapPanel.tsx  TokenInfo.tsx  ui.tsx
contracts/liquidity_pool/: Cargo.toml
contracts/liquidity_pool/src/: lib.rs
contracts/liquidity_pool/test_snapshots/tests/: test_add_liquidity_mints_lp_tokens.1.json  test_initial_pool_is_empty.1.json  test_swap_returns_nonzero_tokens.1.json
contracts/pool_registry/: Cargo.toml
contracts/pool_registry/src/: lib.rs
contracts/pool_registry/test_snapshots/tests/: test_get_pools_returns_registered.1.json  test_initialize_sets_admin.1.json  test_register_pool_increments_count.1.json
contracts/stellar_token/: Cargo.toml
contracts/stellar_token/src/: lib.rs
contracts/stellar_token/test_snapshots/tests/: test_burn_decreases_supply.1.json  test_initialize_sets_supply.1.json  test_mint_increases_supply.1.json  test_transfer_moves_balance.1.json
lib/: contract-client.ts  stellar-helper.ts
scripts/: deploy.sh
tests/: dex.test.tsx  setup.ts
