[workspace]
resolver = "2"
members = [
    "contracts/stellar_token",
    "contracts/liquidity_pool",
    "contracts/pool_registry",
]

[workspace.dependencies]
soroban-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
