[package]
name = "pool_registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar_token = { path = "../stellar_token" }
liquidity_pool = { path = "../liquidity_pool" }
